Fixed wrapping issue for lat/long

--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@
 
 .nav-link {
     font-family: 'Encode Sans Semi Expanded', sans-serif;
-    font-size: 22px;
+    font-size: 16px;
 }
 
 #id-map {
